[package]
name = "expense-tracker-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
cargo-audit = "0.22.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["postgres", "uuid", "chrono", "runtime-tokio", "bigdecimal"] }
tokio = "1.52.3"
tower-http = "0.7.0"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
bcrypt = "0.19.2"
uuid = { version = "1.23.3", features = ["v4"] }